ignore some things on the prod server that should not be checked in

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ local-config.ini
 *.sublime-project
 *.sublime-workspace
 ignore/
+mongo-dumps/
+# I think they say in theory you should commit package-lock but until we start doing that we will ignore it.
+package-lock.json
+tmp/
+
