ignore tmp tmux files

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ mongo-dumps/
 tmp/
 # I think they say in theory you should commit package-lock but until we start doing that we will ignore it.
 package-lock.json
+# Ignore temp files created by tmux
+tmux-client*
 
