change list of background images

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@ tmp/
 package-lock.json
 # Ignore temp files created by tmux
 tmux-client*
+# I don't think I want to actually check in my idea background images, only the ones that are actually in use at the moment
+client-side/static/background-ideas/
 
